# artistools

./: .codecov.yml  .git-blame-ignore-revs  .gitignore  .ignore  .pre-commit-config.yaml  .sourcery.yaml  AGENTS.md  CITATION.cff  CODEOWNERS  LICENCE.txt  LICENSE.txt  README.md  artistoolscompletions.sh  codecov.yml  conftest.py  pyproject.toml  renovate.json  requirements.in  requirements.txt  set_version.py  setup.cfg  setup.py
.github/: CODEOWNERS  dependabot.yml  renovate.json
.github/workflows/: benchmark.yml  black.yml  ci.yml  copilot-setup-steps.yml  depapprove.yml  deploy.yml  deploypypi.yml  deploytestpypi.yml  lint.yml  linter.yml  pytest.yml  pythonapp.yml  release.yml  stale.yaml  stale.yml  updateactions.yml  updatepackages.yml  updateprecommit.yml
artistools/: __init__.py  __main__.py  artistoolscompletions.sh  codecomparison.py  commands.py  config.py  configuration.py  constants.py  deposition.py  diskcache.py  diskcachedecorator.py  ejectaopacity.py  estimators.py  gsinetwork.py  hesma_scripts.py  initial_composition.py  lightcurve.py  linefluxes.py  logfiles.py  macroatom.py  make_vpkt_input.py  matplotlibrc  misc.py  nltepops.py  nonthermal.py  plotejectaopac.py  plotejectopacity.py  plotspherical.py  plottools.py  radfield.py  rustext.pyi  spectra.py  spencerfano.py  stats.py  test_artistools.py  transitions.py  version.py  viewing_angles_visualization.py  writebollightcurvedata.py  writecomparisondata.py
artistools/atomic/: __init__.py  _atomic_core.py  test_atomic.py
artistools/data/: .gitignore  ensdf_df.csv  splitmetadata.py
artistools/data/hesma/: def_2015_n5_hybrid_spectra.txt
artistools/data/lightcurves/: 2004cs_unfiltered_lc_data.txt  2004cs_unfiltered_lc_data_R.txt  2004cs_unfiltered_lc_data_V.txt  2004cs_unfiltered_lc_data_rs.txt  2008ha_lightcurve.txt  SN1991T.dat.meta.yml  SN2015H_r_band.txt  metadata.yml  n100Hdef_2014_B_band.txt  n100Hdef_2014_I_band.txt  n100Hdef_2014_R_band.txt  n100Hdef_2014_V_band.txt  n100Ldef_2014_B_band.txt  n100Ldef_2014_I_band.txt  n100Ldef_2014_R_band.txt  n100Ldef_2014_V_band.txt  n100def_2014_B_band.txt  n100def_2014_I_band.txt  n100def_2014_R_band.txt  n100def_2014_V_band.txt
artistools/data/refspectra/: 2015H_19_days_since_explosion.txt  2016jhr_18days.dat.meta.yml  2018byg_2018-05-14_Keck1_LRIS_None.ascii  2018byg_2018-06-17_Keck1_LRIS_None.ascii  AT2017gfo_ENGRAVE_v1.0_XSHOOTER_MJD-57983.969_Phase+1.43d.dat.meta.yml  AT2017gfo_ENGRAVE_v1.0_XSHOOTER_MJD-57983.969_Phase+1.43d.dat.xz  AT2017gfo_ENGRAVE_v1.0_XSHOOTER_MJD-57984.969_Phase+2.42d.dat.meta.yml  AT2017gfo_ENGRAVE_v1.0_XSHOOTER_MJD-57984.969_Phase+2.42d.dat.xz  AT2017gfo_ENGRAVE_v1.0_XSHOOTER_MJD-57985.974_Phase+3.41d.dat.meta.yml  AT2017gfo_ENGRAVE_v1.0_XSHOOTER_MJD-57985.974_Phase+3.41d.dat.xz  AT2017gfo_ENGRAVE_v1.0_XSHOOTER_MJD-57986.974_Phase+4.40d.dat.meta.yml  AT2017gfo_ENGRAVE_v1.0_XSHOOTER_MJD-57986.974_Phase+4.40d.dat.xz  AT2017gfo_ENGRAVE_v1.0_XSHOOTER_MJD-57987.980_Phase+5.40d.dat.meta.yml  AT2017gfo_ENGRAVE_v1.0_XSHOOTER_MJD-57987.980_Phase+5.40d.dat.xz  AT2017gfo_ENGRAVE_v1.0_XSHOOTER_MJD-57988.990_Phase+6.40d.dat.meta.yml  AT2017gfo_ENGRAVE_v1.0_XSHOOTER_MJD-57988.990_Phase+6.40d.dat.xz  AT2017gfo_ENGRAVE_v1.0_XSHOOTER_MJD-57990.000_Phase+7.40d.dat.meta.yml  AT2017gfo_ENGRAVE_v1.0_XSHOOTER_MJD-57990.000_Phase+7.40d.dat.xz  AT2017gfo_ENGRAVE_v1.0_XSHOOTER_MJD-57991.000_Phase+8.40d.dat.meta.yml  AT2017gfo_ENGRAVE_v1.0_XSHOOTER_MJD-57991.000_Phase+8.40d.dat.xz  AT2017gfo_ENGRAVE_v1.0_XSHOOTER_MJD-57992.000_Phase+9.40d.dat.meta.yml  FranssonJerkstrand2015_W7_330d_10Mpc.txt  (+29 more)
artistools/estimators/: __init__.py  __main__.py  data.py  ejectaopacity.py  estimators.py  estimators_classic.py  exportmassfractions.py  plot.py  plot3destimators_classic.py  plotestimators.py  test_estimators.py
artistools/gsinetwork/: __init__.py  decayproducts.py  initialentropyhistogram.py  modelenergyrelease.py  plotmodelhistogram.py  plotqdotabund.py  test_gsinetwork.py  yehistogram.py
artistools/inputmodel/: 1dslicefrom3d.py  1dslicefromconein3dmodel.py  __init__.py  botyanski2017.py  describeinputmodel.py  downscale3dgrid.py  energyinputfiles.py  from_alcar.py  from_e2e_model.py  fullymixed.py  inputmodel_misc.py  lapuente.py  make1dslicefrom3d.py  make3dplot.py  makeartismodel.py  makeenergyinputfiles.py  makeopacityinputfile.py  maketardismodelfromartis.py  map_1d_to_3d_grid.py  maptogrid.py  merge_models.py  modelfromarepo.py  modelfromhydro.py  opacityinputfile.py  plotdensity.py  plotinitialabundances.py  plotinitialcomposition.py  recombinationenergy.py  rprocess_from_trajectory.py  rprocess_solar.py  scalevelocity.py  shen2018.py  slice1Dfromconein3dmodel.py  slice1dfromconein3dmodel.py  solar_rprocess.py  test_inputmodel.py  to_tardis.py  updatesummaryfile.py
artistools/io/: __init__.py  atomic.py  model.py
artistools/lightcurve/: __init__.py  __main__.py  data.py  lightcurve.py  plot.py  plotlightcurve.py  test_lightcurve.py  viewingangleanalysis.py  writebollightcurvedata.py
artistools/makemodel/: 1dslicefromconein3dmodel.py  __init__.py  fullymixed.py  scalevelocity.py
artistools/nltepops/: __init__.py  __main__.py  data.py  nltepops.py  plot.py  plotnltepops.py  test_nltepops.py
artistools/nonthermal/: __init__.py  __main__.py  _nonthermal_core.py  leptontransport.py  nonthermal.py  plotnonthermal.py  solvespencerfanocmd.py  spencerfano.py  test_nonthermal.py
artistools/opacity/: __init__.py  cellopacitycalculator.py  photosphere.py  plotejectaopac.py  plotgammaopacity.py
artistools/packets/: __init__.py  packets.py  packetsplots.py  test_packets.py
artistools/spectra/: __init__.py  __main__.py  data.py  plot.py  plotspectra.py  sampleblackbodyfrompacketTR.py  sampleblackbodyfrompacket_tr.py  spectra.py  test_spectra.py  test_vspectra.py  writespectra.py
artistools/tests/: test_misc.py  test_plottools.py
rust/: Cargo.toml  build.rs
rust/src/: estimators.rs  lib.rs  transitions.rs
tests/: artistools_test.py  plottransitions_example.sh  test_inputmodel.py
tests/data/: .gitignore  1.tar  grid.out  setuptestdata.sh
(+17 files in other folders)
