[build-system]
requires = ["psutil>=5.9.0", "setuptools>=45", "setuptools_scm[toml]>=6.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "artistools"
authors = [
    {name = "Luke J. Shingles", email = "luke.shingles@gmail.com"},
    {name = "Christine E. Collins", email = "c.collins@gsi.de"},
    {name = "Alexander Holas", email = "alexander.holas@h-its.org"},
    {name = "Fionntan Callan", email = "fcallan02@qub.ac.uk"},
    {name = "Stuart Sim", email = "s.sim@qub.ac.uk"},
]
description="Plotting and analysis tools for the ARTIS 3D supernova radiative transfer code."
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Framework :: Matplotlib",
    "Intended Audience :: Science/Research",
]
dynamic = ["version", "dependencies", "entry-points", "readme"]
requires-python = ">=3.9"

#[project.scripts]
#atcompletions = "artistoolscompletions.sh"

#[tool.setuptools]
#packages = ["artistools"]

[tool.setuptools.dynamic]
readme = {file = ["README.md"]}
dependencies = {file = ["requirements.txt"]}
#entry-points = {attr = "artistools.commands.console_scripts"}

[tool.setuptools.packages.find]
where = ["."]

[tool.black]
line-length = 120
preview = true

[tool.isort]
profile = "black"
src_paths = ["artistools"]
line_length = 120
force_single_line = true
case_sensitive = false
sort_relative_in_force_sorted_sections = true

[tool.mypy]
python_version = '3.11'
exclude = "(build)|(tests)"
packages = "artistools"
ignore_missing_imports = true
warn_unused_configs = true
#files = 'artistools/**/*.py'
plugins = 'numpy.typing.mypy_plugin'
scripts_are_modules = true
strict_equality = true
pretty = true
error_summary = true
enable_error_code = [
  "redundant-expr",
  "truthy-bool",
  "ignore-without-code",
]

[[tool.mypy.overrides]]
module = [
    "artistools",
    "artistools.estimators",
    "artistools.commands",
    "artistools.inputmodel",
    "artistools.lightcurve",
    "artistools.misc",
    "artistools.packets",
    "artistools.spectra",
]
check_untyped_defs = true
disallow_untyped_defs = true
warn_return_any = false
#strict = true

[tool.pylint.'MESSAGES CONTROL']
max-line-length = 120
disable = """
    broad-exception-caught,
    eval-used,
    fixme,
    global-statement,
    missing-function-docstring,
    missing-module-docstring,
    import-outside-toplevel,
    invalid-name,
    line-too-long,
    protected-access,
    redefined-outer-name,
    reimported,
    too-many-arguments,
    too-many-branches,
    too-many-lines,
    too-many-locals,
    too-many-statements,
    unused-argument,
    unused-variable,
    unspecified-encoding,
    C,
    R,
"""
[tool.pylint.typecheck]
ignored-modules = ["astropy", "extinction"]

[tool.ruff]
select = ["ALL"]
ignore = [
    "ARG001", # ignored because variables in df.eval() are not detected
    "ANN",
    "B005",  # strip-with-multi-characters
    "B007",  # variable not used in loop body (but sometimes it is with eval)
    "C901",  # complex-structure
    "COM812",  # missing-trailing-comma
    "D100",  # undocumented-public-module
    "D101",  # undocumented-public-class
    "D102",  # undocumented-public-method
    "D103",  # undocumented-public-function
    "D104",  # undocumented-public-package
    "D107",  # undocumented-public-init
    "D203",  # one-blank-line-before-class
    "D205",  # blank-line-after-summary
    "D213",  # multi-line-summary-second-line
    "D401",  # non-imperative-mood
    "D417",  # undocumented-param
    "E501", # Line too long
    "E741", # Ambiguous variable name
    "ERA001",  # commented-out-code
    "F841", # unused-variable. ignored because variables in df.eval() are not detected
    "FBT",
    "FIX002",  # line contains TODO
    "N802",  # Function name should be lowercase
    "N803",  # Argument name should be lowercase
    "N806",  # Variable should be lowercase
    "N999",  # invalid-module-name
    "PD901",  # df is a bad variable name
    "PGH001",  # No builtin `eval()` allowed
    "PLR0911",  # too-many-return-statements
    "PLR0912",  # too-many-branches
    "PLR0913",  # too-many-arguments
    "PLR0915",  # too-many-statements
    "PLR2004",  # magic-value-comparison
    "PTH112",  # os-path-isdir
    "PTH113",  # os-path-isfile
    "PTH118",  # os-path-join
    "PTH119",  # os-path-basename
    "PTH123",  # builtin-openß
    "PLW2901",  #
    #"RET504",  # unnecessary-assign
    "S101",  # Use of assert detected
    "S301",  # suspicious-pickle-usage
    "S311",  # suspicious-non-cryptographic-random-usage
    "S506",  # unsafe-yaml-load
    "S603",  # subprocess-without-shell-equals-true
    "S607",  # start-process-with-partial-path
    "SLF001",  # private-member-access
    "T201",  # print found
    "TD002",  # missing-todo-author
    "TD003",  # missing-todo-link
    "TRY301",  # raise-within-try
]
fixable = ["ALL"]
unfixable = [
    "COM812",  # missing-trailing-comma
    "ERA001",  # commented-out-code (will just delete it!)
    "F841",  # unused-variable
    "SIM222", # expr-or-true
    "SIM223", # expr-and-false
]
line-length = 120
target-version = "py39"
fix = true
show-fixes = true
ignore-init-module-imports = true

[tool.ruff.flake8-annotations]
ignore-fully-untyped = true

[tool.ruff.flake8-import-conventions.extend-aliases]
"artistools" = "at"

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.isort]
force-single-line = true
order-by-type = false

[tool.setuptools_scm]
write_to = "_version.py"
local_scheme = "no-local-version"
