[build-system]
requires = ["maturin>=1.14"]
build-backend = "maturin"

[project]
name = "artistools"
authors = [
    { name = "Luke J. Shingles", email = "luke.shingles@gmail.com" },
    { name = "Christine E. Collins", email = "c.collins@gsi.de" },
    { name = "Alexander Holas", email = "alexander.holas@h-its.org" },
    { name = "Fionntan Callan", email = "fcallan02@qub.ac.uk" },
    { name = "Stuart Sim", email = "s.sim@qub.ac.uk" },
    { name = "Joshua Pollin", email = "jpollin02@qub.ac.uk" },
    { name = "Gerrit Leck", email = "g.leck@gsi.de" },
]
description = "Plotting and analysis tools for the ARTIS 3D radiative transfer code for supernovae and kilonovae."
classifiers = [
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Free Threading",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics",
]
version = "2026.6.18"
requires-python = ">=3.13"
license = "MIT"
license-files = ["LICEN[CS]E*"]
readme = { file = "README.md", content-type = 'text/markdown' }
dependencies = [
    "argcomplete>=3.6.3",
    "extinction>=0.4.7",
    "matplotlib>=3.10.8",
    "numpy>=2.4.6",
    "pandas>=3.0.2",
    "polars>=1.41.1",
    "pyarrow>=22.0.0",
    "pyyaml>=6.0.2",
    "rich>=15.0.0",
    "scipy>=1.17.1",
    "tqdm>=4.67.3",
    "zstandard>=0.25.0;python_version<'3.14'",
]

[project.optional-dependencies]
extras = [
    "astropy>=7.2",
    "george>=0.4.4",
    "imageio>=2.37.2",
    "plotly>=6.7.0",
    "pypdf>=6.10.2",
    "pynonthermal>=2026.4.27",
    "pyvista>=0.47.1;python_version<'3.15'", # not compatible with cpython 3.15 yet
]

[dependency-groups]
dev = [
    "basedpyright>=1.39.3",
    # "beartype>=0.22.9", # numpy 2.5.0 broke beartype, so we disable it for now
    "imageio>=2.37.3",
    "mypy>=2.0.0",
    "pandas-stubs>=3.0.0.260204",
    "prek>=0.2.28",
    "pynonthermal>=2026.4.27",
    "pyrefly>=1.0.0",
    "pytest>=9.0.3",
    "pytest-codspeed>=4.4.0",
    "pytest-cov>=7.1.0",
    "pytest-xdist[psutil]>=3.8.0",
    "ruff>=0.15.20",
    "scipy-stubs>=1.17.1",
    "ty>=0.0.49",
    "types-python-dateutil>=2.9.0.20260408",
    "types-pyyaml>=6.0.12.20260408",
    "types-tqdm>=4.67.3.20260408",
]

[project.urls]
Repository = "https://www.github.com/artis-mcrt/artistools"
Source = "https://www.github.com/artis-mcrt/artistools"

[project.scripts]
at = 'artistools.__main__:main'
artistools = 'artistools.__main__:main'
makeartismodel1dslicefromcone = 'artistools.inputmodel.slice1dfromconein3dmodel:main'
makeartismodel = 'artistools.inputmodel.makeartismodel:main'
plotartisdensity = 'artistools.inputmodel.plotdensity:main'
plotartisdeposition = 'artistools.deposition:main'
plotartisestimators = 'artistools.estimators.plotestimators:main'
plotartislightcurve = 'artistools.lightcurve.plotlightcurve:main'
plotartislinefluxes = 'artistools.linefluxes:main'
plotartismacroatom = 'artistools.macroatom:main'
plotartisnltepops = 'artistools.nltepops.plotnltepops:main'
plotartisnonthermal = 'artistools.nonthermal:main'
plotartisradfield = 'artistools.radfield:main'
plotartisspectrum = 'artistools.spectra.plotspectra:main'
plotartistransitions = 'artistools.transitions:main'
plotartisinitialcomposition = 'artistools.inputmodel.plotinitialcomposition:main'
plotartisviewingangles = 'artistools.viewing_angles_visualization:main'

[tool.cibuildwheel]
build-frontend = "uv"
archs = ["auto64"]
# installing dependencies on Linux arm64 takes ~20 minutes
#test-command = "python -m artistools"

[tool.cibuildwheel.linux]
before-all = [
    "mkdir -p /host/home/runner/work/artistools/artistools/rust/target",
    "mkdir -p /project/rust/target",
    "rm -rf /project/rust/target",
    "ln -s -f /host/home/runner/work/artistools/artistools/rust/target /project/rust/",
    "curl -sSf https://sh.rustup.rs | sh -s -- -y",
]
environment = { PATH = "$HOME/.cargo/bin:$PATH" }

[tool.cibuildwheel.macos]
before-all = [
    "rustup update stable",
]

[tool.maturin]
bindings = "pyo3"
profile = "release"
manifest-path = "rust/Cargo.toml"
module-name = "artistools.rustext"
use-base-python = true
include = [
    "artistools/data/**",
    "**/artistoolscompletions.sh",
    "**/matplotlibrc",
    "**/pyproject.toml",
    "**/README.md",
    "**/*.cff",
    "**/LICENSE*",
]

[tool.mypy]
python_executable = ".venv/bin/python3"
check_untyped_defs = true
allow_redefinition = true
disallow_any_explicit = false
disallow_any_generics = true
disallow_any_unimported = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
error_summary = true
enable_error_code = [
    "comparison-overlap",
    "ignore-without-code",
    "no-any-return",
    "no-any-unimported",
    "no-untyped-call",
    "redundant-cast",
    "redundant-expr",
    "redundant-self",
    "truthy-bool",
    "truthy-iterable",
    "type-arg",
    "unused-awaitable",
]
exclude = "(build)|(dist)|(tests)|(data)|(.venv)|(venv)"
extra_checks = true
ignore_missing_imports = true
implicit_optional = false
implicit_reexport = false
packages = "artistools"
pretty = true
scripts_are_modules = true
strict = true
strict_equality = true
warn_redundant_casts = true
warn_unreachable = false
warn_unused_configs = true
warn_unused_ignores = true
warn_return_any = true
fixed_format_cache = true

[tool.pylint.'MESSAGES CONTROL']
max-line-length = 120
disable = """
    broad-exception-caught,
    cell-var-from-loop,
    fixme,
    missing-function-docstring,
    missing-module-docstring,
    import-outside-toplevel,
    invalid-name,
    line-too-long,
    no-member,
    not-an-iterable,
    not-context-manager,
    possibly-used-before-assignment,
    protected-access,
    redefined-outer-name,
    too-many-arguments,
    too-many-branches,
    too-many-function-args,
    too-many-lines,
    too-many-locals,
    too-many-nested-blocks,
    too-many-statements,
    unbalanced-tuple-unpacking,
    unspecified-encoding,
    unsupported-assignment-operation,
    unused-argument,
    C,
    R,
"""

[tool.pylint.typecheck]
ignored-modules = ["astropy", "extinction", "pyvista"]
unsafe-load-any-extension = true

[tool.pyrefly]
preset = "strict"
project-excludes = [
    "**/node_modules",
    "**/__pycache__",
    "**/venv/**",
    "**/.[!/.]*/**",
    '**/build/**',
    '**/dist/**',
    '**/target/**',
    '**/.venv/**',
    '**/rd_cmfgen.py',
]
python-interpreter-path = ".venv/bin/python3"

[tool.pyrefly.errors]
missing-import = false
unbound-name = false
unsupported-operation = false
implicit-any-empty-container = true

[tool.pyright]
venvPath = "."
venv = ".venv"
enableTypeIgnoreComments = false # leave these for mypy to interpret
exclude = [
    '**/node_modules',
    '**/__pycache__',
    '**/.*',
    'build',
    'dist',
    'target',
    '.venv',
    '**/rd_cmfgen.py',
]
reportAny = false
reportCallInDefaultInitializer = false
reportConstantRedefinition = false
reportExplicitAny = false
reportImplicitOverride = "error"
reportImplicitStringConcatenation = false
reportImportCycles = false
reportMatchNotExhaustive = false
reportMissingImports = "information"
reportMissingTypeStubs = false
reportPossiblyUnboundVariable = false
reportPropertyTypeMismatch = "error"
reportUninitializedInstanceVariable = false
reportUnknownArgumentType = false
reportUnknownLambdaType = false
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnnecessaryComparison = "information"
reportUnreachable = false
reportUnusedCallResult = false
reportUnusedParameter = false
typeCheckingMode = "strict"
useLibraryCodeForTypes = true
pythonVersion = "3.13"

[tool.pytest]
minversion = "9.0"
addopts = [
    "--durations=0",
    "--durations-min=1.0",
    "-n",
    "auto",
]
testpaths = ["artistools"]

[tool.refurb]
ignore = ["FURB120"]
quiet = false
enable_all = true
python_version = "3.13"
sort_by = "error"

[[tool.refurb.amend]]
path = "./artistools/inputmodel/fromcmfgen/rd_cmfgen.py"
ignore = ["FURB108"]

[tool.ruff]
line-length = 120
fix = true
extend-exclude = [
    "artistools/inputmodel/fromcmfgen/rd_cmfgen.py",
    ".venv/**",
]
preview = true
required-version = ">=0.15.20"

[tool.ruff.format]
skip-magic-trailing-comma = true
preview = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "any-type",
    "complex-structure",
    "missing-trailing-comma",
    "missing-copyright-notice",
    "undocumented-public-module",
    "undocumented-public-class",
    "undocumented-public-method",
    "undocumented-public-function",
    "undocumented-public-package",
    "undocumented-public-init",
    "D203",                                      # incorrect-blank-line-before-class
    "multi-line-summary-second-line",
    "undocumented-param",
    "docstring-missing-returns",
    "docstring-missing-yields",
    "docstring-missing-exception",
    "line-too-long",
    "commented-out-code",
    "FBT",
    "line-contains-todo",
    "invalid-function-name",
    "invalid-argument-name",
    "non-lowercase-variable-in-function",
    "mixed-case-variable-in-class-scope",
    "import-outside-top-level",
    "too-many-locals",
    "too-many-positional-arguments",
    "too-many-nested-blocks",
    "too-many-return-statements",
    "too-many-branches",
    "too-many-arguments",
    "too-many-statements",
    "magic-value-comparison",
    "redefined-loop-name",
    "redundant-numeric-union",
    "float-equality-comparison",
    "assert",
    "suspicious-non-cryptographic-random-usage",
    "suspicious-subprocess-import",
    "start-process-with-partial-path",
    "print",
    "missing-todo-author",
    "missing-todo-link",
]
fixable = ["ALL"]
unfixable = [
    "commented-out-code", # (will just delete it!)
    "unused-import",      # (can be annoying to have import disappear while editing)
    "unused-variable",
    "expr-or-true",
    "expr-and-false",
]

[tool.ruff.lint.per-file-ignores]
"rd_cmfgen.py" = ["blanket-noqa"]

[tool.ruff.lint.flake8-import-conventions.extend-aliases]
"artistools" = "at"
"matplotlib" = "mpl"
"matplotlib.axes" = "mplax"
"matplotlib.figure" = "mplfig"
"matplotlib.pyplot" = "plt"
"matplotlib.typing" = "mplt"
"numpy.typing" = "npt"
"polars" = "pl"
"polars.selectors" = "cs"
"polars.testing" = "pltest"
"pynonthermal" = "pynt"
"typing" = "t"

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"
require-lazy = "all"

[tool.ruff.lint.isort]
force-single-line = true
order-by-type = false

[tool.ty.rules]
unresolved-import = "ignore"

[tool.ty.src]
exclude = ["artistools/inputmodel/fromcmfgen/rd_cmfgen.py", ".venv/**"]

[tool.uv.sources]
# pyarrow = { index = "scientific-python-nightly" }

[[tool.uv.index]]
name = "scientific-python-nightly"
url = "https://pypi.anaconda.org/scientific-python-nightly-wheels/simple/"
explicit = true

[tool.vulture]
exclude = [".*", "build/", ".eggs/", ".venv", "venv"]
paths = ["artistools"]
sort_by_size = true

[tool.zuban]
mode = "default"
disallow_untyped_calls = false
