[package]
name = "rustext"
version = "0.1.2"
authors = ["Luke Shingles <luke.shingles@gmail.com>"]
edition = "2021"

[lib]
name = "rustext"
crate-type = ["cdylib"]

[dependencies]
autocompress = { version = "0.6.0", features = ["gzip", "rayon", "xz", "zstd"] }
polars = { version = "0.42", features = ["diagonal_concat"] }
# "performant" feature is not compatible with pyo3-polars 0.16.0
pyo3 = { version = "0.22", features = ["abi3-py310"] }
pyo3-polars = { version = "0.16", features = ["dtype-struct", "dtype-full"]}
# enable "dtype-struct" feature if https://github.com/pola-rs/pyo3-polars/pull/99 is merged for compatibility with performant feature.
rayon = "1.10"
