[package]
name = "rustext"
version = "0.2.0"
authors = ["Luke Shingles <luke.shingles@gmail.com>"]
edition = "2021"

[lib]
name = "rustext"
crate-type = ["cdylib"]

[dependencies]
autocompress = { version = "0.6.0", features = ["gzip", "rayon", "xz", "zstd"] }
polars = { version = "0.42.0", features = ["diagonal_concat", "performant"] }
pyo3 = { version = "0.21.1", features = ["abi3-py310"] }
pyo3-polars = "0.15.0"
rayon = "1.10"
