[package]
name = "artistools"
version = "2026.2.17"
authors = ["Luke Shingles <luke.shingles@gmail.com>"]
edition = "2024"
rust-version = "1.87"
description = "Rust functions used to speed up the artistools python package"
license = "MIT"
homepage = "https://github.com/artis-mcrt/artistools"
repository = "https://github.com/artis-mcrt/artistools"
readme = "../README.md"

[lib]
name = "rustext"
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
autocompress = { version = "0.6.0", features = ["gzip", "rayon", "xz", "zstd"] }
polars = { version = "0.53.0", features = ["diagonal_concat", "performant"] }
# features = ["abi3-py312"]
pyo3 = { version = "0.27.2" }
pyo3-polars = { version = "0.26.0" }
rayon = "1.10"

[profile.dev]
opt-level = 3
debug = "full"
#lto = "thin"

[profile.release]
#codegen-units = 1
debug = "none"
opt-level = 3
overflow-checks = false
#lto = "fat"
